--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <footer>
   <div class="container">
     <div class="logo-contact">
-      <img src="./images/logo-footer.svg" alt="">
+      <img class="logo-footer"src="./images/logo-footer.svg" alt="">
       <div class="phone">
         <img src="./images/icon-phone.svg" alt="">
         <p>Phone: +1-543-123-4567</p>
